--- a/.header.md
+++ b/.header.md
@@ -7,13 +7,16 @@ Aside the multi-Account Firewall Manager implementation, the repository also cre
 * Hub and Spoke architecture (with [AWS Transit Gateway](https://aws.amazon.com/transit-gateway/)) with centralized inspection in the central Networking/Security AWS Account - this Network Firewall resource is not managed by Firewall Manager.
 * Two Spoke VPCs in the spoke AWS Account, both of them attached to the Transit Gateway. Each VPC also has a Network Load Balancer pointing to a target group of several EC2 instances (one created in each Availability Zone where you created resources).
 * The Transit Gateway created in the central AWS Account is shared with the AWS Organization using [AWS Resource Access Manager](https://aws.amazon.com/ram/).
+* [AWS Secrets Manager](https://docs.aws.amazon.com/secretsmanager/latest/userguide/intro.html) secrets to share information between AWS Accounts (Spoke VPC information, Firewall Manager ID, and Transit Gateway ID).
+
+You will find two folders with the code (*central_account* and *spoke_account*) to separate the resources and the actions to perform in two different AWS Accounts. Feel free to deploy everything in one Account, although we recommend the use of two to test the multi-Account functionality of AWS Firewall Manager.
 
 [ADD IMAGE HERE]
 
 ## Prerequities
 
-* The repository uses two providers - as it expects two AWS Accounts. You can use a *terraform.tfvars* file (or environment variables) to pass the AWS Account information. Both AWS Accounts should have IAM user with appropriate permissions.
-* If using two AWS Accounts, they should be in the same AWS Organizations to use AWS Firewall Manager. Check the [documentation](https://docs.aws.amazon.com/waf/latest/developerguide/fms-prereq.html) to understand the prerequisites needed to enable Firewall Manager.
+* If you use two AWS Accounts - make sure you use different AWS credentials when initializing the provider in each folder.
+* [AWS Organizations](https://docs.aws.amazon.com/organizations/latest/userguide/orgs_introduction.html) and [AWS Config](https://docs.aws.amazon.com/config/latest/developerguide/WhatIsConfig.html) should be enabled in your AWS Account(s) to use Firewall Manager. Check the [documentation](https://docs.aws.amazon.com/waf/latest/developerguide/fms-prereq.html) to understand the prerequisites needed to enable Firewall Manager.
 * Terraform installed.
 
 ## Code Principles
@@ -23,15 +26,76 @@ Aside the multi-Account Firewall Manager implementation, the repository also cre
 ## Usage
 
 * Clone the repository.
-* Edit the *variables.tf* to change the identifier (used to name some resources), the Ingress VPCs to create, the information about the Inspection VPC, or the network supernet to use.
+
+```
+git clone https://github.com/aws-samples/manage-aws-network-firewall-multi-account-aws-firewall-manager.git
+```
+
+* Edit the *variables.tf* in each folder to configure your environments:
+  * *central_account*: you can configure the Network supernet, and Inspection VPC information.
+  * *spoke_account*: you can configure the Spoke VPC(s) information.
+  * Two variables (*aws_region* and *secrets_names*) should be configured with the same values in both folders, to have all the resources working in the AWS Region and to share infrastructure information using Secrets Manager.
 
 ## Deployment
 
-* Use `terraform apply` to deploy the Hub and Spoke architecture in the central Account, and the spoke VPCs (with the NLB and EC2 instances) in the spoke Account.
-* Uncomment lines 18 - 58 in *main_central_account.tf* and use `terraform apply` to create the Firewall Manager resource. Check in the spoke AWS Account that a Network Firewall resource is created in each spoke VPC you have created. Wait for the firewalls to be ready.
-* Uncomment lines 31, and 80 - 107 in *main_spoke_account.tf* and use `terraform apply` to create the VPC routes via the firewall endpoints in the spoke VPCs.
-  * Line 31 removes the default route (0.0.0.0/0) from the spoke VPCs to the Internet gateway.
-  * Check the modules used in lines 80 - 107 (vpc-resources and vpc-routes) in the *modules* folder to understand how to get the resources created by Firewall Manager to create the VPC routes.
+Given we are working in a multi-Account environment, we need to deploy the resources in a specific order. The idea is also to show what is the normal deployment flow in a real environment when having centralized Networking and Security services (such as AWS Transit Gateway or AWS Firewall Manager).
+
+**In each step, make sure you use the proper AWS Account (folder).**
+
+### Step 1 [CENTRAL ACCOUNT] - Transit Gateway and Secrets Manager
+
+First, we deploy the Transit Gateway to allow VPC attachments from the Spoke AWS Accounts, and the Secrets Manager secrets. In this first iteration, the Transit Gateway ID is provided so in the next step can be used by the Spoke Account. We are also sharing the Transit Gateway with the AWS Organization using AWS RAM.
+
+```
+terraform apply -target="aws_secretsmanager_secret.spoke_vpc_information" -target="aws_secretsmanager_secret_version.transit_gateway" -target="aws_ram_resource_association.tgw_share" -target="aws_ram_principal_association.principal_association"
+```
+
+Note that when doing a `terraform plan`, there are more resources to add than the specified as *targets*. To simplify the command, we are taking advantage of the [target](https://developer.hashicorp.com/terraform/tutorials/state/resource-targeting) functionality in Terraform, that also deploys resources that the targets depend on. We are following this pattern in the rest of steps.
+
+### Step 2 [SPOKE ACCOUNT] - Spoke VPCs and Secrets Manager
+
+Once we have the Transit Gateway deployed in the central Account, we can create the Spoke VPCs in the spoke Account. In addition, we add the spoke VPC information (TGW VPC attachment IDs, CIDR blocks to use for the firewall subnets, and VPC IDs) to the Secrets Manager secret provided by the central Account.
+
+```
+terraform apply -target="module.ingress_vpcs" -target="aws_secretsmanager_secret_version.spoke_vpc_information"
+```
+
+### Step 3 [CENTRAL ACCOUNT] - Hub and Spoke architecture
+
+It's time to configure all the routing logic with the Transit Gateway (hub and spoke with central Inspection VPC). Note that the Inspection VPC is used for east-west and egress traffic. Later we will configure the inspection for ingress traffic with Firewall Manager (decentralized ingress in all the Spoke VPCs).
+
+```
+terraform apply -target="module.hubspoke"
+```
+
+You may ask yourself: "why not deploy the compute resources in the spoke Account at the same time?". Well, those instances will require some Internet connectivity at creation (packages to create the HTTP server), so we need to provide this connectivity via the central Inspection VPC first.
+
+### Step 4 [SPOKE ACCOUNT] - Compute resources
+
+Once the hub and spoke configuration is ready, and we are providing Internet access via the central Inspection VPC, let's deploy the compute resources (NLBs and EC2 instances).
+
+```
+terraform apply -target="module.compute"
+```
+
+### Step 5 [CENTRAL ACCOUNT] - AWS Firewall Manager policy
+
+Time to test Firewall Manager! Now we are deploying the Firewall Manager policy, and we add its ID to the corresponding Secrets Manager secret (we need to pass this information to the spoke Account). We don't need to do a target now as we are deploying the last resources needed in the central Account.
+
+```
+terraform apply
+```
+
+**Before proceding to finalize the deployment in the spoke Account, you need to wait for the provision of the Network Firewall resources managed by Firewall Manager**. The Firewall Manager policy will identify that the Spoke VPCs from the spoke Account are within scope, and it will deploy Network Firewall resources. Before getting the information about those resources to create the VPC routes in the spoke Account, you need to wait for its provision.
+
+### Step 6 [SPOKE ACCOUNT] - VPC routing pointing to the new firewall endpoints.
+
+* First, uncomment line 46 from *main.tf* in the *spoke_account* folder. This line removes the 0.0.0.0/0 route to the Internet gateway (VPC module configuration).
+* Now, let's deploy the VPC routing to force the ingress traffic to be inspected by Network Firewall. We don't need to do a target now as we are deploying the last resources needed in the spoke Account.
+
+```
+terraform apply
+```
 
 ## Firewall policies
 
@@ -85,8 +149,8 @@ resource "aws_fms_policy" "ingress_policy" {
 
 You can check the [AWS documentation](https://docs.aws.amazon.com/waf/latest/developerguide/network-firewall-policies.html) and [Terraform Registry resource](https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/fms_policy) to get more information about the format and content of this resource. Regarding the firewall policy itself:
 
-* The stateless rule group blocks any SSH or RDP traffic. You can see this rule group defined in the *firewall_policy.tf* file. Traffic not blocked will be sent to 
-* The stateful rule group (STRICT) blocks any traffic by default, and it only has one pass rule allowing traffic from the Internet to any resource inside the VPC.
+* The stateless rule group blocks any SSH traffic. You can see this rule group defined in the *central_account/firewall_policy.tf* file. Traffic not blocked will be sent to the stateful engine.
+* The stateful rule group (STRICT) blocks any traffic by default, and it only has one pass rule allowing HTTP traffic from the Internet to any resource inside the VPC.
 
 ```
 pass tcp $EXTERNAL_NET any -> $HOME_NET any (msg: "Allowing HTTP ingress access"; sid:2; rev:1;)
@@ -125,7 +189,7 @@ resource "aws_networkfirewall_firewall_policy" "central_inspection_policy" {
 
 You can check the [AWS documentation](https://docs.aws.amazon.com/network-firewall/latest/developerguide/what-is-aws-network-firewall.html) and [Terraform Registry resource](https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/networkfirewall_firewall_policy) to get more information about the format and content of this resource. Regarding the firewall policy itself:
 
-* The stateless rule group blocks any SSH or RDP traffic. You can see this rule group defined in the *firewall_policy.tf* file. Traffic not blocked will be sent to 
+* The stateless rule group blocks any SSH traffic. You can see this rule group defined in the *central_account/firewall_policy.tf* file. Traffic not blocked will be sent to the stateful engine.
 * The stateful rule group (DEFAULT) blocks any ICMP or TCP traffic from VPCs in the network (supernet defined in the $NETWORK variable).
 
 ```
@@ -135,9 +199,32 @@ drop tcp $NETWORK any -> $NETWORK any (msg: "Blocking East-West traffic"; sid:2;
 
 ## Cleanup
 
-* Remove the VPC routing created via the firewall endpoints using `terraform destroy -target="module.vpc_routes"`.
-* You can now remove the AWS Firewall Manager policy, which will automatically remove the Network Firewall resources, subnets and route tables created by the service - `terraform destroy -target="aws_fms_policy.ingress_policy". Wait for these resources to be completely removed before continuing with the cleanup.
-* Now you can remove the rest of the environment by using `terraform destroy`. You will need to comment the definition of the *vpc_resources* and *vpc_routes* modules to avoid errors during the planning phase.
+Same as with the deployment, we need to destroy the resources in a certain order.
+
+* STEP 1 [SPOKE ACCOUNT] - Delete VPC routes pointing to the firewall endpoint. That way Firewall Manager can remove the Network Firewall resources once we remove the policy in the central Account.
+  * In addition, comment back line 46 - so when you deploy everything again, that VPC route is created.
+
+```
+terraform destroy -target="module.vpc_resources" -target="module.vpc_routes"
+```
+
+* STEP 2 [CENTRAL ACCOUNT] - Delete Firewall Manager policy. **Wait for the Network Firewall resources, firewall subnets and route tables to be deleted from spoke Account**
+
+```
+terraform destroy -target="aws_fms_policy.ingress_policy"
+```
+
+* STEP 3 [SPOKE ACCOUNT] - Delete Spoke VPCs and compute resources (last resources in spoke Account)
+
+```
+terraform destroy -target="module.ingress_vpcs" -target="module.compute"
+```
+
+* STEP 4 [CENTRAL ACCOUNT] - Delete all the resources left in the central Account
+
+```
+terraform destroy
+```
 
 ## Security
 
